# routegate

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
routegate/: caddy.py  cloudflare.py  config.py  main.py  reload.py  routes.py  services.py  tunnel.py
routegate/templates/: _flash.html  _form.html  _panel.html  _row.html  _row_confirm.html  base.html  form.html  list.html
tests/: test_caddy.py  test_cloudflare.py  test_services.py  test_tunnel.py
tests/fixtures/: sample_caddyfile  sample_config.yml
