[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "routegate"
version = "0.1.0"
description = "Web GUI for managing Caddy + cloudflared + Cloudflare DNS routes"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "ruamel.yaml>=0.18",
    "docker>=7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
routegate = "routegate.main:run"

[tool.hatch.build.targets.wheel]
packages = ["routegate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
